--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
         "psr-4": {
             "Star\\TicTacToe\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Star\\TicTacToe\\": "tests"
+        }
     }
 }
